package com.scm.shipment_service.model;

public enum ShipmentStatus {
    PENDING,
    SHIPPED,
    IN_TRANSIT,
    DELIVERED
}

